--- a/css/common.css
+++ b/css/common.css
@@ -467,6 +467,47 @@ ul {
         color: #555;
     }
 
+    .common-item {
+        position: relative;
+    }
+    .common-item .common-body {
+        
+    }
+
+    .blog ul {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+    .blog ul li {
+        width: 30%;
+        height: 20em;
+        border: 1px solid #C0C0C0;
+        margin-bottom: 1.6em;
+        padding-bottom: 12px;
+    }
+    .blog .common-image .attachment-common {
+        object-fit: cover;
+        display: block;
+        margin: auto;
+    }
+    .blog .name {
+        font-size: 1rem;
+        padding: 0 0 0 12px;
+    }
+    .blog .release {
+        font-size: 0.8rem;
+        padding: 0 0 0 12px;
+    }
+    .blog .buttonBox {
+        text-align: right;
+        /* margin: 0 12px 12px 0; */
+        padding: 0 12px 0 0;
+    }
+    .blog .buttonBox .seeDetail {
+        font-size: 0.8rem;
+    }
+
     .page-container {
         max-width: 1120px;
     }
@@ -838,7 +879,7 @@ ul {
         border: 1px solid #C0C0C0;
         margin-bottom: 1em;
     }
-    
+
     .footer-main {
         display: flex;
         flex-wrap: wrap;
